[package]
name = "saltbox-facts"
version = "0.0.0-dev"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.13.0", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.145"
