[package]
name = "saltbox-facts"
version = "0.0.0-dev"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt", "time"] }
reqwest = { version = "0.13.2" }
serde_json = "1.0.149"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "local_paths"
harness = false
